navbar: Prevent to overlap contact form on small sizes

--- a/src/app/arancibia/contact-form/contact-form.component.scss
+++ b/src/app/arancibia/contact-form/contact-form.component.scss
@@ -2,6 +2,7 @@
     color: white;
     background-color: rgba(0, 0, 0, 0.65);
     padding: 1.2em 0.8em;
+    margin: 1.2em 0em;
     border-radius: 1em;
 }
 
